--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@ p {
   line-height: 1.35;
 }
 
-@media (min-width: 480px) {
+@media (width >= 480px) {
   h1 {
     max-width: none;
   }
@@ -43,9 +43,9 @@ p {
   font-size: inherit;
   padding: 1em 2em;
   color: #335d92;
-  background-color: rgba(68, 107, 158, 0.1);
+  background-color: rgb(68 107 158 / 10%);
   border-radius: 2em;
-  border: 2px solid rgba(68, 107, 158, 0);
+  border: 2px solid rgb(68 107 158 / 0%);
   outline: none;
   width: 200px;
   font-variant-numeric: tabular-nums;
@@ -57,5 +57,5 @@ p {
 }
 
 .increment:active {
-  background-color: rgba(68, 107, 158, 0.2);
+  background-color: rgb(68 107 158 / 20%);
 }
